# Proiect-3D

./: CMakeLists.txt  Camera.h  Particle.h  main.cpp  mosu1.mtl  particle.frag  particle.vert  penguin.mtl  santa.frag  santa.vert  shader.frag  shader.vert  skybox.vert
src/: objloader.cpp
